--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,13 @@
 @charset "UTF-8";
 
 * {
-	-webkit-box-sizing:border-box;
-	box-sizing:border-box;
+  border-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+}
+
+body {
+	overflow-x:hidden;
 }
 
 html,body {
@@ -10,70 +15,77 @@ html,body {
 	margin:0;
 }
 
-
-/*
- * Style tweaks
- * --------------------------------------------------
- */
-html,
-body {
-  overflow-x: hidden; /* Prevent scroll on narrow devices */
-}
-body {
-  padding-top: 70px;
-}
-footer {
-  padding: 30px 0;
+#main {
+	display:-webkit-box;
+	display:-webkit-flex;
+	display:-ms-flexbox;
+	display:flex;
+	overflow:hidden;
+	height:100vh;
+	position:relative;
+	width:100%;
+	-webkit-backface-visibility:hidden;
+	backface-visibility:hidden;
+	will-change:overflow;
 }
 
-/*
- * Off Canvas
- * --------------------------------------------------
- */
-@media screen and (max-width: 767px) {
-  .row-offcanvas {
-    position: relative;
-    -webkit-transition: all .25s ease-out;
-         -o-transition: all .25s ease-out;
-            transition: all .25s ease-out;
-  }
-
-  .row-offcanvas-right {
-    right: 0;
-  }
-
-  .row-offcanvas-left {
-    left: 0;
-  }
-
-  .row-offcanvas-right
-  .sidebar-offcanvas {
-    right: -50%; /* 6 columns */
-  }
-
-  .row-offcanvas-left
-  .sidebar-offcanvas {
-    left: -50%; /* 6 columns */
-  }
-
-  .row-offcanvas-right.active {
-    right: 50%; /* 6 columns */
-  }
-
-  .row-offcanvas-left.active {
-    left: 50%; /* 6 columns */
-  }
-
-  .sidebar-offcanvas {
-    position: absolute;
-    top: 0;
-    width: 50%; /* 6 columns */
-  }
+#offcanvas,.main-content {
+	overflow:auto;
+	height:auto;
+	-webkit-overflow-scrolling:touch;
+	-ms-overflow-style:none;
 }
 
-header#header {
-	position: absolute;
+#offcanvas::-webkit-scrollbar,.main-content::-webkit-scrollbar {
+	display:none;
+}
+
+#offcanvas {
+	width:12.5rem;
+}
+
+.main-content {
+	-webkit-box-flex:1;
+	-webkit-flex:1;
+	-ms-flex:1;
+	flex:1;
+}
+
+#wrapper {
+  position: relative;
+  width: 100%;
+  min-width: 20rem;
+}
+
+#offcanvas {
+  position: static;
+  width: 100%;
+  height: 100%;
+  right: -12.5rem;
+  float: left;
+}
+
+#offcanvas, #main {
+  overflow-y: scroll; /* has to be scroll, not auto */
+  -webkit-overflow-scrolling: touch;
+}
+
+header {
+	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100%;
+	height: 40px;
+	background: #000;
+	z-index: 1;
+}
+
+.main-content {
+	padding-top: 40px;
+}
+
+#offcanvas .container .row {
+	margin-left: 0;
+	margin-right: 0;
+	margin-top: 10px;
 }
